--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.0.6",
     "nuka-carousel": "^5.4.1",
     "react": "18.2.0",
+    "react-countup": "^6.4.1",
     "react-dom": "18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "sass": "^1.56.1"
