--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-next": "13.0.6",
     "firebase": "^9.15.0",
     "next": "13.0.6",
+    "next-sitemap": "^4.0.2",
     "nuka-carousel": "^5.4.1",
     "react": "18.2.0",
     "react-countup": "^6.4.1",
