--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "@tanstack/react-query": "^4.29.3",
+    "@tanstack/react-query-devtools": "^4.29.3",
     "aos": "^2.3.4",
+    "bootstrap": "^5.2.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "firebase": "^9.15.0",
@@ -18,6 +21,7 @@
     "next-sitemap": "^4.0.2",
     "nuka-carousel": "^5.4.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-countup": "^6.4.1",
     "react-dom": "18.2.0",
     "react-responsive-carousel": "^3.2.23",
