--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-countup": "^6.4.1",
     "react-dom": "18.2.0",
+    "react-gtm": "^0.0.2",
     "react-responsive-carousel": "^3.2.23",
     "sass": "^1.56.1"
   }
