--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@nextui-org/react": "^1.0.0-beta.12",
     "@sendgrid/mail": "^7.7.0",
     "@tanstack/react-query": "^4.29.3",
